Allow author to update and delete an article

--- a/src/main/resources/templates/articles/create.html
+++ b/src/main/resources/templates/articles/create.html
@@ -12,6 +12,9 @@
   <label>Title:</label>
   <input type="text" th:field="*{title}" required /><br/>
 
+  <label>Subtitle:</label><br/>
+  <input type="text" th:field="*{subTitle}" placeholder="Optional subtitle" /><br/><br/>
+
   <label>Content:</label>
   <textarea th:field="*{content}" rows="6" cols="50" required></textarea><br/>
 
