--- a/src/main/resources/templates/articles/detail.html
+++ b/src/main/resources/templates/articles/detail.html
@@ -5,14 +5,31 @@
 </head>
 <body>
 <h2 th:text="${article.title}"></h2>
+
+<p th:if="${article.subTitle != null}" 
+   style="font-style: italic; color: gray;"
+   th:text="${article.subTitle}"></p>
+
 <p>
   <small>
     by <span th:text="${article.author.name}"></span>,
     <span th:text="${#dates.format(article.createdOn, 'dd MMM yyyy HH:mm')}"></span>
+    <span th:if="${article.updatedOn != null}">
+      (Updated on <span th:text="${#dates.format(article.updatedOn, 'dd MMM yyyy HH:mm')}"></span>)
+    </span>
   </small>
 </p>
 
 <p th:text="${article.content}"></p>
+
+<div th:if="${authUser != null and authUser.id == article.author.id}">
+  <a th:href="@{'/articles/' + ${article.id} + '/edit'}">Edit</a> |
+  <form th:action="@{'/articles/' + ${article.id} + '/delete'}" method="post" style="display:inline;">
+    <button type="submit" onclick="return confirm('Are you sure you want to delete this article?')">
+      Delete
+    </button>
+  </form>
+</div>
 
 <hr/>
 <h3>Comments</h3>
