--- a/src/main/resources/templates/articles/list.html
+++ b/src/main/resources/templates/articles/list.html
@@ -1,25 +1,28 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-  <title>All Articles</title>
+<title>All Articles</title>
+<link rel="stylesheet" th:href="@{/css/style.css}">
 </head>
 <body>
-<h2>Welcome, <span th:text="${authUser.name}">User</span>!</h2>
+	<div class="navbar">
+		<a href="/articles/create">Create New Article</a> | <a
+			href="/my-account">My Account</a> | <a href="/logout">Logout</a>
+	</div>
 
-<div>
-  <a href="/articles/create">Create New Article</a> |
-  <a href="/my-account">My Account</a> |
-  <a href="/logout">Logout</a>
-</div>
+	<div class="container">
+		<h2>
+			Welcome, <span th:text="${authUser.name}">User</span>!
+		</h2>
 
-<hr/>
+		<hr />
 
-<h3>All Articles</h3>
-<ul>
-  <li th:each="article : ${articles}">
-    <a th:href="@{'/articles/' + ${article.id}}" th:text="${article.title}"></a>
-  </li>
-</ul>
-
+		<h3>All Articles</h3>
+		<ul>
+			<li th:each="article : ${articles}"><a
+				th:href="@{'/articles/' + ${article.id}}" th:text="${article.title}"></a>
+			</li>
+		</ul>
+	</div>
 </body>
 </html>
