--- a/src/main/resources/templates/users/login.html
+++ b/src/main/resources/templates/users/login.html
@@ -1,27 +1,28 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Login</title>
+<title>Login</title>
+<link rel="stylesheet" th:href="@{/css/style.css}">
 </head>
 <body>
-<h1>Login</h1>
+	<div class="container">
+		<h1>Login</h1>
 
-<div th:if="${error}" style="color:red" th:text="${error}"></div>
+		<div th:if="${error}" class="error" th:text="${error}"></div>
 
-<form th:action="@{/login}" th:object="${loginUser}" method="post">
-    <label>Username:</label>
-    <input type="text" th:field="*{username}" required /><br/>
+		<form th:action="@{/login}" th:object="${loginUser}" method="post">
+			<label>Username:</label> <input type="text" th:field="*{username}"
+				required /><br /> <label>Password:</label> <input type="password"
+				th:field="*{password}" required /><br />
 
-    <label>Password:</label>
-    <input type="password" th:field="*{password}" required /><br/>
+			<button type="submit">Login</button>
+		</form>
 
-    <button type="submit">Login</button>
-</form>
+		<p class="text-center mt-2">
+			New user? <a th:href="@{/signup}">Sign up here</a>
+		</p>
 
-<p>
-    New user? <a th:href="@{/signup}">Sign up here</a>
-</p>
-
-<div th:if="${message}" style="color:green" th:text="${message}"></div>
+		<div th:if="${message}" class="success" th:text="${message}"></div>
+	</div>
 </body>
 </html>
