--- a/src/main/resources/templates/users/signup.html
+++ b/src/main/resources/templates/users/signup.html
@@ -1,35 +1,39 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Sign Up</title>
+<title>Sign Up</title>
+<link rel="stylesheet" th:href="@{/css/style.css}">
 </head>
 <body>
-<h1>Signup</h1>
+	<div class="container">
+		<h1>Signup</h1>
 
-<!-- General error -->
-<div th:if="${error}" style="color:red" th:text="${error}"></div>
+		<!-- General error -->
+		<div th:if="${error}" class="error" th:text="${error}"></div>
 
-<form th:action="@{/signup}" method="post" th:object="${user}">
-    <label>Name:</label>
-    <input type="text" th:field="*{name}" required />
-    <div th:if="${#fields.hasErrors('name')}" th:errors="*{name}" style="color:red"></div><br/>
+		<form th:action="@{/signup}" method="post" th:object="${user}">
+			<label>Name:</label> <input type="text" th:field="*{name}" required />
+			<div th:if="${#fields.hasErrors('name')}" th:errors="*{name}"
+				class="error"></div>
+			<br /> <label>Username:</label> <input type="text"
+				th:field="*{username}" required />
+			<div th:if="${#fields.hasErrors('username')}" th:errors="*{username}"
+				class="error"></div>
+			<br /> <label>Email:</label> <input type="email" th:field="*{email}"
+				required />
+			<div th:if="${#fields.hasErrors('email')}" th:errors="*{email}"
+				class="error"></div>
+			<br /> <label>Password:</label> <input type="password"
+				th:field="*{password}" minlength="8" required />
+			<div th:if="${#fields.hasErrors('password')}" th:errors="*{password}"
+				class="error"></div>
+			<br />
 
-    <label>Username:</label>
-    <input type="text" th:field="*{username}" required />
-    <div th:if="${#fields.hasErrors('username')}" th:errors="*{username}" style="color:red"></div><br/>
+			<button type="submit">Sign Up</button>
+		</form>
 
-    <label>Email:</label>
-    <input type="email" th:field="*{email}" required />
-    <div th:if="${#fields.hasErrors('email')}" th:errors="*{email}" style="color:red"></div><br/>
-
-    <label>Password:</label>
-    <input type="password" th:field="*{password}" minlength="8" required />
-    <div th:if="${#fields.hasErrors('password')}" th:errors="*{password}" style="color:red"></div><br/>
-
-    <button type="submit">Sign Up</button>
-</form>
-
-<!-- Success message -->
-<div th:if="${message}" style="color:green" th:text="${message}"></div>
+		<!-- Success message -->
+		<div th:if="${message}" class="success" th:text="${message}"></div>
+	</div>
 </body>
 </html>
